add meta data for share preview

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:site_name" content="Star Wars React App"/>
+    <meta property="og:title" content="Star Wars React App"/>
+    <meta property="og:type" content="website" />
+    <!-- <meta 
+      property="og:description" 
+      content="Connecting dog owners with high-quality training resources, so you can skip the time-consuming search and get straight to the fun of bonding with your dog"
+    /> -->
+    <meta 
+      property="og:image" 
+      content="https://i.imgur.com/NMkEV6o.png"
+    />
+    <!-- <meta property="og:url" content="https://pup-trainer.netlify.app/"/> -->
+
     <link rel="icon" href="%PUBLIC_URL%/Death-Star-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
