--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
     <meta property="og:type" content="website" />
     <!-- <meta 
       property="og:description" 
-      content="Connecting dog owners with high-quality training resources, so you can skip the time-consuming search and get straight to the fun of bonding with your dog"
+      content=""
     /> -->
     <meta 
       property="og:image" 
       content="https://i.imgur.com/NMkEV6o.png"
     />
-    <!-- <meta property="og:url" content="https://pup-trainer.netlify.app/"/> -->
+    <meta property="og:url" content="https://star-wars-react-mlueder.netlify.app/"/>
 
     <link rel="icon" href="%PUBLIC_URL%/Death-Star-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
